<resources>
    <string name="app_name">The Butterfly Corner</string>
    <string name="title_activity_log_in">Log in</string>
    <string name="title_activity_sign__up">Sign Up</string>
    <string name="title_activity_contact_us">Contact Us</string>
    <string name="title_activity_contact__us">Contact Us</string>
    <string name="title_activity_about__us">About Us</string>
    <string name="title_activity_butterfly_db">Butterflies</string>
    <string name="title_activity_acraea_violae">Acraea Violae</string>
    <string name="title_activity_cethosia_cyane">Cethosia Cyane</string>
    <string name="title_activity_danaus__chrysippus">Danaus Chrysippus</string>
    <string name="title_activity_graphium__agamemnon">Graphium Agamemnon</string>
    <string name="title_activity_hypolimnas_bolina">Hypolimnas Bolina</string>
    <string name="title_activity_pachliopta_aristolochiae">Pachliopta Aristolochiae</string>
    <string name="title_activity_papilio_demoleus">Papilio Demoleus</string>
    <string name="title_activity_papilio_memnon">Papilio Memnon</string>
    <string name="title_activity_parthenos_slyvia">Parthenos Slyvia</string>
    <string name="title_activity_number_of_players">Number Of Players</string>
    <string name="title_activity_itempage">Menu</string>
    <string name="title_activity_capture_butterfly">Capture Butterfly</string>
    <string name="preview_description">How to play\nCapture butterfly images using the capture button\nCompare them with the choice of butterfly you believe it to be\nrepeat the process 5 times\nIf you get them correct, you might get a coupon to be used at our TBC Coffee Shop\n\nAvoid Blur images\nUse the reset button to reset images\nUse the coupon button to check if you won the coupon\n\nYou can check the number of images captured and compared in the score box below</string>
    <string name="btn_take_picture">Take Picture</string>
    <string name="btn_confirm_picture">Confirm Picture</string>
    <string name="coupon_text">Coupon Description will appear here</string>
    <string name="_66926199662">+66926199662</string>
    <string name="the_butterfly_corner_pattaya_co_ltd_nong_pla_lai">The Butterfly Corner Pattaya Co.,Ltd. Nong Pla Lai.</string>
    <string name="address">Address</string>
    <string name="the_butterfly_corner_pattaya_welcome_you_to_join_us_on_special_tour_with_many_species_of_butterflies_flying_around_you">The butterfly Corner Pattaya welcome you to join us on special tour with many species of butterflies flying around you.</string>
    <string name="about">About</string>
    <string name="contact_butterflycorner_world">contact@butterflycorner.world</string>
    <string name="https_the_butterfly_corner_pattaya_coltd_business_site">https://the-butterfly-corner-pattaya-coltd.business.site</string>
    <string name="coupons">Coupons</string>
    <string name="contact_us">Contact Us</string>
    <string name="menu">Menu</string>
    <string name="butterflies">Butterflies</string>
    <string name="play_and_win_coupons">Play and win Coupons</string>
    <string name="the_butterfly_corner">The Butterfly Corner</string>
    <string name="menu_card_images_will_appear_here">Menu Card Images will appear here</string>
    <string name="abc">abc</string>
    <string name="cethosia_cyane_the_leopard_lacewing_is_a_species_of_heliconiine_butterfly_found_from_india_to_southern_china_and_indochina_its_range_has_expanded_in_the_last_few_decades_and_its_arrival_in_the_southern_part_of_the_malay_peninsula_including_singapore_is_relatively_recent">Cethosia cyane, the leopard lacewing, is a species of heliconiine butterfly found from India to southern China, and Indochina. Its range has expanded in the last few decades, and its arrival in the southern part of the Malay Peninsula, including Singapore, is relatively recent</string>
    <string name="compare_picture">Compare Picture</string>
    <string name="compare">Compare</string>
</resources>
