<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_marginTop="32dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="2"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text"
            android:text="@string/the_butterfly_corner"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="24sp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_below="@+id/text"
            android:id="@+id/textViewGame"
            android:text="@string/play_and_win_coupons"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/default_activity_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/tbc_logo"
            android:layout_alignParentRight="true"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.101"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.757"
            android:clickable="true"
            android:focusable="true"/>
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:contextClickable="true"
        android:layout_gravity="center"

        android:layout_weight="8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <GridLayout

            android:columnCount="2"
            android:rowCount="2"
            android:padding="28dp"
            android:layout_gravity="center_horizontal"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:padding="20dp"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/butterflydb"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <ImageView
                        android:id="@+id/butterflyImg"
                        android:src="@drawable/ic_butterfly"
                        android:layout_width="80dp"
                        android:layout_gravity="center"
                        android:layout_height="80dp"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="#6F6F6F"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:text="@string/butterflies"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/playbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                android:clickable="true"
                android:focusable="true"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <ImageView

                        android:src="@drawable/ic_game_controller"
                        android:layout_width="80dp"
                        android:layout_gravity="center"
                        android:layout_height="80dp"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="#6F6F6F"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:text="Play"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/contactBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                android:clickable="true"
                android:focusable="true"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <ImageView
                        android:id="@+id/contactus"
                        android:src="@drawable/ic_contact"
                        android:layout_width="80dp"
                        android:layout_gravity="center"
                        android:layout_height="80dp"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="#6F6F6F"
                        android:textSize="18sp"
                        android:text="@string/contact_us"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/couponbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                android:clickable="true"
                android:focusable="true"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <ImageView

                        android:src="@drawable/ic_coupon"
                        android:layout_width="80dp"
                        android:layout_gravity="center"
                        android:layout_height="80dp"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="#6F6F6F"
                        android:textSize="18sp"
                        android:text="@string/coupons"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>
    </LinearLayout>


</LinearLayout>